# heisenberg

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: INTEGRATION_COMPLETE.md  LLM_ARCHITECTURE.md  LLM_GUIDE.md  LLM_INTEGRATION_SUMMARY.md
heisenberg/: main.py
heisenberg/audio/: buffers.py  capture.py  playback.py  vad.py
heisenberg/core/: config.py  exceptions.py  logging.py  metrics.py
heisenberg/interfaces/: audio.py  llm.py  stt.py  tts.py  wakeword.py
heisenberg/llm/: README.md  __init__.py  prompts.py  stream.py
heisenberg/orchestrator/: events.py  fsm.py  policies.py  router.py  session.py  state.py
heisenberg/stt/: model.py  stream.py  whisper.py
heisenberg/tests/: diagnose_audio.py  manual_stt_verify.py  test_events.py  test_fsm.py  test_latency.py  test_llm.py  test_rpi.py  test_stt_whisper.py  test_wakeword.py  verify_audio_quality.py
heisenberg/tts/: stream.py  voices.py
heisenberg/wakeword/: engine.py
