[project]
name = "heisenberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.23.2",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "scipy>=1.12.0",
    "whispercpp",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
